// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`complete state 1`] = `
[
  1,
  0,
  "A",
  1,
  [
    1,
    2,
    "subA",
    1,
    1,
    0,
    true,
  ],
]
`;

exports[`partial updates 1`] = `
[
  2,
  0,
  "B",
]
`;

exports[`partial updates 2`] = `
[
  2,
  0,
  "C",
  1,
  [
    2,
    1,
    3,
  ],
]
`;

exports[`reassigning subcomponent 1`] = `
[
  2,
  1,
  [
    1,
    2,
    "subC",
    1,
    3,
    0,
    true,
  ],
]
`;

exports[`update 1`] = `
[
  2,
  0,
  "B",
  1,
  [
    2,
    2,
    "subB",
    1,
    2,
    0,
    false,
  ],
]
`;
